--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.6-Alpha1
        - Fix issue where file tag pattern was ignore if files have no tag
                structur
        - Add TDRC to list of parsed id3v2 tags
	- Added the rating to a single song view
	- Fix caching issue when updating ratings where they would not
		display correctly until a page reload
	- Altered the behavior of adding to playlists so that it maintains
		playlist order rather then using track order
	- Strip excessive \n's from catalog_update (Thx ascheel)
	- Fix incorrect default ogg transcode target in base config file
	- Fix stream user preferences using cached system preferences 
		rather then their own 
	- Fixed prevent_multiple_logins preventing all logins (Thx Hugh)
	- Added additional information to installation process 
	- Fix PHP 5.3 errors (Thx momo-i)
	- Fix random methods not working for localplay
	- Fixed extra space on prefixed albums (Thx ibizaman)
        - Add missing operator on tag and rating searches so they will
                work with other methods (Thx kiehnet@netscape.net)
	- Add MusicBrainz MBID support to uniqly identify albums and
		also get more album art (Thx flowerysong)
	- Fix the url to song function
	- Add full path to the files needed by the installation just to 
		make it a little clearer
	- Fixed potential endless loop with malformed genre tags in mp3s
		(Thx Bernhard Weyrauch)
	- Fixed web path always returning false on /test.php
	- Updated Man Page to fix litian problems for Debian packaging
	- Fixed bug where video was registering as songs for now playing
		and stats
	- Add phpmailer and change ampache.cfg.php.dist
	- Fixed manpage (Thx Porthose)
